@@ -134,7 +134,7 @@ public class BatchConsumer extends HttpServlet
 	    numThreads = ingestService.getQueueServiceConf().getString("BatchNumThreads");
 	    if (StringUtil.isNotEmpty(numThreads)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting thread pool size: " + numThreads);
-		this.numThreads = new Integer(numThreads).intValue();
+		this.numThreads = Integer.valueOf(numThreads);
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set thread pool size: " + numThreads + "  - using default: " + this.numThreads);
@@ -144,7 +144,8 @@ public class BatchConsumer extends HttpServlet
 	    pollingInterval = ingestService.getQueueServiceConf().getString("BatchPollingInterval");
 	    if (StringUtil.isNotEmpty(pollingInterval)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting polling interval: " + pollingInterval);
-		this.pollingInterval = new Integer(pollingInterval).intValue();
+		this.pollingInterval = Integer.valueOf(pollingInterval);
+
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set polling interval: " + pollingInterval + "  - using default: " + this.pollingInterval);
@@ -434,6 +435,7 @@ class BatchConsumerDaemon implements Runnable
         } finally {
            try {
 	     zooKeeper.close();
+	     zooKeeper = null;
            } catch(Exception ze) {}
         }
     }
@@ -536,7 +538,8 @@ class BatchConsumeData implements Runnable
 
 	    ingestRequest.getJob().setJobStatus(JobStatusEnum.CONSUMED);
 	    // ingestRequest.getJob().setQueuePriority(JSONUtil.getValue(jp,"queuePriority"));
-	    Boolean update = new Boolean(jp.getBoolean("update"));
+	    Boolean update = Boolean.valueOf(jp.getBoolean("update"));
+
 	    ingestRequest.getJob().setUpdateFlag(update.booleanValue());
 	    ingestRequest.setQueuePath(new File(ingestService.getIngestServiceProp() + FS +
 			"queue" + FS + ingestRequest.getJob().grabBatchID().getValue()));
@@ -564,6 +567,7 @@ class BatchConsumeData implements Runnable
         } finally {
            try {
 	      zooKeeper.close();
+	      zooKeeper = null;
            } catch(Exception ze) {}
         }
 
@@ -692,6 +696,7 @@ class BatchCleanupDaemon implements Runnable
 	    sessionAuth = null;
            try {
                 zooKeeper.close();
+                zooKeeper = null;
            } catch(Exception ze) {}
         }
     }
